# ChangeLog for dev-perl/extutils-parsexs
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/extutils-parsexs/ChangeLog,v 1.49 2008/03/19 03:30:39 jer Exp $

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> extutils-parsexs-2.18.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> extutils-parsexs-2.18.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  07 Jul 2007; Tom Gall <tgall@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  stable on ppc64

  06 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  alpha/ia64/x86 stable

  12 May 2007; Joshua Kinard <kumba@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  ppc stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  extutils-parsexs-2.17.ebuild:
  Stable on ppc64

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.18.ebuild:
  Marking stable amd64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  extutils-parsexs-2.17.ebuild:
  Stable on x86, bug #169152.

*extutils-parsexs-2.18 (04 Feb 2007)

  04 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +extutils-parsexs-2.18.ebuild:
  Version bump

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.17.ebuild:
  marking sparc stable

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.17.ebuild:
  marking amd64 stable

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  extutils-parsexs-2.16.ebuild:
  Stable on ppc.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.16.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  extutils-parsexs-2.16.ebuild:
  amd64 stable

*extutils-parsexs-2.17 (22 Nov 2006)
