@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/extutils-parsexs
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/extutils-parsexs/ChangeLog,v 1.49 2008/03/19 03:30:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/extutils-parsexs/ChangeLog,v 1.50 2008/04/30 11:31:09 tove Exp $
+
+*extutils-parsexs-2.19 (30 Apr 2008)
+
+  30 Apr 2008; Torsten Veller <tove@gentoo.org>
+  +extutils-parsexs-2.19.ebuild:
+  Version bump
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org> extutils-parsexs-2.18.ebuild:
   Stable for HPPA too.
